# Daemond

./: .gitignore  CMakeLists.txt  build.sh  readme.md
config/: conf.h
lib/: trie.h
samples/: ls_unit.cpp  ssh_unit  ssh_unit.cpp
scripts/: serialize.sh
src/abstract/comm/: comm_center.h  comm_session.h
src/abstract/comms/: comms_client.h  comms_server.h  comms_session.h
src/abstract/manager/: loaded_unit.cpp  loaded_unit.h  manager.cpp  manager.h  manager_codes.h
src/abstract/serialization/: common.h  unit_deserialization.cpp  unit_deserialization.h  unit_serialization.cpp  unit_serialization.h
src/abstract/serialization/cache/: cache.h
src/abstract/unit/: loaded_unit.cpp  loaded_unit.h
src/abstract/unit/data/: unit_attr.h  unit_data.h  unit_desc.h  unit_id.h  unit_priority.h  unit_type.h
src/abstract/unit/data/dependencies/: conflict.h  dependency.h  unit_dependencies.h
src/abstract/unit/data/exec/: command.h  exec_reload.h  exec_start.h  exec_stop.h  unit_exec.h
src/abstract/unit/data/management/: command.h  management_reload.h  management_start.h  management_stop.h  management_test.h  unit_management.h
src/abstract/unit/runtime/: runtime_data.h  runtime_status.cpp  runtime_status.h
src/main/: serialize.cpp
src/main/daemond/: daemond.cpp  injector.cpp  injector.h
src/main/daemond_cnt/: daemond_ctl.cpp  injector.cpp  injector.h
src/main/linux/: daemond.cpp  daemond_ctl.cpp
src/os/linux/: cache.cpp  linux_comm_center.cpp  linux_comm_center.h  linux_comm_session.cpp  linux_comm_session.h  linux_command.cpp  linux_command.h  linux_loaded_unit.h  linux_manager.cpp  linux_manager.h
src/os/linux/cache/: cache.cpp
src/os/linux/comms/unix_sock/: linux_comm_center.cpp  linux_comm_center.h  linux_comm_client.cpp  linux_comm_client.h  linux_comm_server.cpp  linux_comm_server.h  linux_comm_session.cpp  linux_comm_session.h
src/os/linux/manager/: linux_manager.cpp  linux_manager.h
src/os/linux/unit/: linux_loaded_unit.cpp  linux_loaded_unit.h  linux_unit_exec.cpp  linux_unit_exec.h
